$Id: History,v 1.5 1999-04-16 09:32:00 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Apr 16,  99 H.Kurashige (tag run-01-00-03)
-  Remove G4VUserPhysicsList::ConstructAllParticles and related
-  Change argument of SetCuts method

Apr 14, 99 H.Kurashige (tag run-01-00-02)
- "buildPhysicsTable" command is added in G4UserPhysicsListMessenger

Apr 09, 99 M.Asai (tag run-01-00-01)
- Argument of G4UserRunAction methods bcomes to const.

Feb. 9 99 H.Kurashige
- G4VUserPhysicsList::RemoveProcessManager is added 

Dec. 9 98 H.Kurashige (tag run-00-04-01)
- G4VUserPhysicsList is updated to use G4GenericIon (Hisaya)
- G4VUserPhysicsList::ConstructAllParticles method is added (Hisaya)
- G4VUserPhysicsList::DumpCutValues use BestOfUnits (Michel)

Nov 12, 98 M.Asai (tag run-00-03-05)
- G4VUserPhysicsList.cc is updated for new EM physics processes (L.Urban).

Oct 13, 98 M.Asai (tag run-00-03-04)
- PostStepDoIt of transportation is registered (J.Apostolakis).

Oct 01, 98 M.Asai (tag run-00-03-03)
- G4RunManager now has a switch for optimizing the geometry.
- G4RunMessenger has a UI command for above switch.

Sep 29, 98 M.Asai (tag run-00-03-02)
- Modifications on G4VUserPhysicsList (M.Maire and L.Urban)
