@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4RunManager.hh,v 1.1 1999-01-07 16:14:15 gunter Exp $
+// $Id: G4RunManager.hh,v 1.2 1999-04-22 21:51:11 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -118,6 +118,7 @@ class G4RunManager
     G4bool pauseAtBeginOfEvent;
     G4bool pauseAtEndOfEvent;
 
+    G4int runIDCounter;
     G4int verboseLevel;
     G4Timer * timer;
     G4DCtable* DCtable;
@@ -184,6 +185,8 @@ class G4RunManager
       return NULL;
     }
 
+    inline void SetRunIDCounter(G4int i)
+    { runIDCounter = i; }
     inline void SetDCtable(G4DCtable* DCtbl)
     { DCtable = DCtbl; }
 };
