@@ -1,4 +1,4 @@
-$Id: History,v 1.5 1999-04-16 09:32:00 kurasige Exp $
+$Id: History,v 1.6 1999-04-22 21:51:06 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Apr 22, 99 M.Asai (tag run-01-00-04)
+- Now run ID is set by G4RunManager.
+
 Apr 16,  99 H.Kurashige (tag run-01-00-03)
 -  Remove G4VUserPhysicsList::ConstructAllParticles and related
 -  Change argument of SetCuts method
